--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     <span class="text-brand-blue/80 font-semibold uppercase text-sm">Years of Batches</span>
                 </div>
                 <div class="bg-white/20 p-6 rounded-lg backdrop-blur-sm">
-                    <span class="block text-4xl font-black text-brand-blue mb-2">TOP</span>
+                    <span class="block text-4xl font-black text-brand-blue mb-2">ICSE & CBSE</span>
                     <span class="text-brand-blue/80 font-semibold uppercase text-sm">District Toppers</span>
                 </div>
             </div>
