--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="relative hidden lg:block" name="hero-image">
                     <div class="absolute -inset-4 bg-brand-gold/20 rounded-xl blur-lg"></div>
                     <div class="relative rounded-xl overflow-hidden shadow-2xl border-4 border-white/10 h-[500px]">
-                        <img src="https://api.designfast.io/v1/photo_library/findone?desc=Indian%20classroom%20with%20books%20and%20academic%20atmosphere%20professional&w=600&h=800&orientation=portrait" alt="Academic Excellence" class="w-full h-full object-cover">
+                        <img src="cch1.jpeg" alt="Academic Excellence" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     <div class="absolute top-0 -left-4 w-24 h-24 bg-brand-gold/20 rounded-full z-0"></div>
                     <div class="absolute bottom-0 -right-4 w-32 h-32 bg-brand-blue/10 rounded-full z-0"></div>
                     <div class="relative z-10 rounded-lg overflow-hidden shadow-xl h-[500px] border-l-8 border-brand-blue">
-                        <img src="sheetal website.jpeg" alt="Sheetal Sarda" class="w-full h-full object-cover">
+                        <img src="ss1.jpeg" alt="Sheetal Sarda" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="order-1 md:order-2 space-y-6">
